[gd_scene load_steps=5 format=3 uid="uid://b124ey87qbsde"]

[ext_resource type="Script" path="res://scenes/UI/main_menu.gd" id="1_yk3uh"]
[ext_resource type="Texture2D" uid="uid://cyxcgmjsjy2q7" path="res://scenes/UI/MainMenuBackground.png" id="2_uu6kv"]
[ext_resource type="FontFile" uid="uid://1sgaaoxeknei" path="res://assets/Fonts/SuperMario256.ttf" id="3_hp8qn"]

[sub_resource type="LabelSettings" id="LabelSettings_irkox"]
line_spacing = 2.0
font = ExtResource("3_hp8qn")
font_size = 70
font_color = Color(0.0866334, 0.392124, 0.291047, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk3uh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uu6kv")
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 22.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Menu" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="Background/MarginContainer/Menu"]
layout_mode = 2
text = "ECO-CLICK"
label_settings = SubResource("LabelSettings_irkox")

[node name="PlayButton" type="Button" parent="Background/MarginContainer/Menu"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_hp8qn")
theme_override_font_sizes/font_size = 24
text = "PLAY"

[node name="SettingsButton" type="Button" parent="Background/MarginContainer/Menu"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_hp8qn")
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="Background/MarginContainer/Menu"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_hp8qn")
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -33.0
offset_right = 26.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Video"

[node name="Audio" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Audio"

[node name="BackSettings" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -48.0
offset_right = 26.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -41.0
offset_right = 66.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Fullscreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
icon_alignment = 1

[node name="BackVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -51.0
offset_right = 26.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -41.5
offset_right = 126.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Music"

[node name="SoundFX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 2

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 2

[node name="SoundFX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 2

[node name="BackAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -51.0
offset_right = 26.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_hp8qn")
text = "Back"

[connection signal="pressed" from="Background/MarginContainer/Menu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Background/MarginContainer/Menu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Background/MarginContainer/Menu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Settings/BackSettings" to="." method="_on_back_settings_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Video/BackVideo" to="." method="_on_back_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/SoundFX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/BackAudio" to="." method="_on_back_audio_pressed"]
